--- a/views/hosting.pug
+++ b/views/hosting.pug
@@ -427,7 +427,7 @@ block content
         section.row.mt4
           .row
             .col-xs-12
-              a(href="#") Go back
+              a(href="/") Go back
 
   //- Modals
   section.modals
