--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -96,7 +96,6 @@ p {
   background-color: $primary-blue;
   color: $white;
   min-height: 300px;
-  padding: 100px 0;
 
   &__lead {
     font-size: 1.6em;
@@ -120,6 +119,11 @@ p {
 .hero__disclaimer {
   margin-bottom: -10px;
   margin-top: 20px;
+}
+
+.card__icon {
+  height: 120px;
+  width: 120px;
 }
 
 .category {
