--- a/views/home.pug
+++ b/views/home.pug
@@ -7,7 +7,8 @@ mixin section-card(title, description, url, icon)
       .card-header
         h3.text-center= title
       .card-content
-        p= icon
+        .text-center.mb4
+          img.card__icon(src=cdn + "/img/icons/" + icon, alt=title + " icon")
         p= description
         .text-center
           a.btn.btn-warning(href=url) View
@@ -28,4 +29,17 @@ block content
       .row
         //- content is setup in home.js controller
         each section in content
-          +section-card(section.name, section.description, section.url, section.icon)
+          //- Hack to center the last item (if we have more sections, this can be probably removed)
+          if section.name !== 'Cloud computing'
+            +section-card(section.name, section.description, section.url, section.icon)
+          else
+            .col-xs-12.col-sm-6.col-sm-offset-3.col-md-4.col-md-offset-4
+              .card
+                .card-header
+                  h3.text-center= section.name
+                .card-content
+                  .text-center.mb4
+                    img.card__icon(src=cdn + "/img/icons/" + section.icon, alt=section.name + " icon")
+                  p= section.description
+                  .text-center
+                    a.btn.btn-warning(href=section.url) View
