--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -12,20 +12,18 @@ nav.navbar.navbar-transparent.navbar-fixed-top.navbar-color-on-scroll.navbar-inf
         li.dropdown(class=(title == 'Deploystack') ? 'active' : null)
           a.dropdown-toggle(href='#' data-toggle="dropdown") Tools #[b.caret]
           ul.dropdown-menu
-            li #[a(href="/#hosting") Hosting]
-            li #[a(href="/#domain") Domains]
-            li #[a(href="/#ssl") SSL]
-            li #[a(href="/#monitoring") Monitoring]
-            li #[a(href="/#web-analytics") Analytics]
-            li #[a(href="/#files-storage") Files storage]
-            li #[a(href="/#cdn") CDN]
-            li #[a(href="/#error-tracking") Error tracking]
-            li #[a(href="/#emails") Emails]
-            li #[a(href="/#version-control") Version Control]
-            li #[a(href="/#continuous-integration") Continuous integration]
-            li #[a(href="/#static-websites") Static websites]
-            li #[a(href="/#cloud-computing") Cloud computing]
-        li(class=(title == 'FAQ') ? 'active' : null)
-          a(href='/faq') FAQ
+            li #[a(href="/hosting") Hosting]
+            li #[a(href="/domain") Domains]
+            li #[a(href="/ssl") SSL]
+            li #[a(href="/monitoring") Monitoring]
+            li #[a(href="/web-analytics") Analytics]
+            li #[a(href="/files-storage") Files storage]
+            li #[a(href="/cdn") CDN]
+            li #[a(href="/error-tracking") Error tracking]
+            li #[a(href="/emails") Emails]
+            li #[a(href="/version-control") Version Control]
+            li #[a(href="/continuous-integration") Continuous integration]
+            li #[a(href="/static-websites") Static websites]
+            li #[a(href="/cloud-computing") Cloud computing]
         li(class=(title == 'Contact') ? 'active' : null)
           a(href='/contact') Contact
