--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -116,21 +116,14 @@ p {
   }
 }
 
-.hero__disclaimer {
-  margin-bottom: -10px;
-  margin-top: 20px;
+.hero__icon {
+  height: 200px;
+  width: 200px;
 }
 
 .card__icon {
   height: 120px;
   width: 120px;
-}
-
-.category {
-  &__header {
-    margin-bottom: 20px;
-    margin-top: 50px;
-  }
 }
 
 .background-inverse {
