--- a/views/includes/section-mixins.pug
+++ b/views/includes/section-mixins.pug
@@ -17,7 +17,7 @@ mixin section-hero(content)
     .container
       .row
         .hero__box
-          .text-center.hidden-xs.col-sm-5.mt5
+          .text-center.hidden-xs.col-sm-5
             img.hero__icon(src=cdn + "/img/icons/" + content.icon, alt=content.title + " icon")
           .hero__text.col-xs-12.col-sm-7.mb7
             h1.text-center= content.name
