--- a/views/faq.pug
+++ b/views/faq.pug
@@ -23,7 +23,7 @@ block content
             img(src=cdn + "/img/rocket.svg" alt="rocket flying out of the monitor")
           .hero__text.col-sm-12.text-center
             h1 DeployStack
-            p.hero__lead Frequently Asked Questions
+            p.hero__text Frequently Asked Questions
   main
     .main.main-raised
       section
