--- a/views/home.pug
+++ b/views/home.pug
@@ -22,8 +22,8 @@ block content
             img(src=cdn + "/img/rocket.svg" alt="rocket flying out of the monitor")
           .hero__text.col-xs-12.col-sm-6.col-md-7
             h1.text-center DeployStack
-            p.hero__lead Tired of comparing hosting plans, calculating the file storage cost or paying for the SSL certificates?
-            p.hero__lead DeployStack is a list of the best, hand picked tools and services that you might need when launching a website.
+            p.hero__description Tired of comparing hosting plans, calculating the file storage cost or paying for the SSL certificates?
+            p.hero__description DeployStack is a list of the best, hand picked tools and services that you might need when launching a website.
   main.bg-blue
     .container
       .row
