--- a/views/includes/footer.pug
+++ b/views/includes/footer.pug
@@ -4,6 +4,8 @@ footer.footer.background-inverse
       .pull-center
         span © 2016-2017 DeployStack.
         br
+        span Some of the links are #[a(href="#" data-toggle="modal", data-target="#affiliations-disclaimer", aria-label="Affiliations disclaimer information") affiliate links]
+        br
         span Made by #[a(href="https://github.com/switowski" target="_blank") switowski] using #[a(href="https://www.creative-tim.com/product/material-kit/?affiliate_id=93857" target="_blank") Material Kit] and #[a(href="http://www.freepik.com/free-vector/rocket-flying-out-of-the-monitor_765338.htm" target="_blank") Rocket image by freepik]
       .social-icons.pull-right
         a.js-social-share.dib.pa2(href="http://twitter.com/share?url=https://deploystack.io&amp;text=DeployStack: curated list of tools for launching websites&amp;hashtags=deploystack" target="_blank" title="Twitter share")
@@ -12,3 +14,4 @@ footer.footer.background-inverse
           i.fa.fa-facebook
         a.js-social-share.dib.pa2(href="https://plus.google.com/share?url=https://deploystack.io" target="_blank" title="Google Plus share")
           i.fa.fa-google-plus
+    include modals/affiliation-modal
