--- a/public/css/partials/_overrides.scss
+++ b/public/css/partials/_overrides.scss
@@ -1,11 +1,12 @@
 // Override some framework settings
+$primary-blue: #03a9f4;
 body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4 {
   // Increase default font weight
   font-weight: 400;
 }
 
 a,a:focus,a:hover {
-  color: #03a9f4;
+  color: $primary-blue;
 }
 
 body {
@@ -28,8 +29,55 @@ body {
   }
 }
 
+//Add pricing cards (from material dashboard pro)
+.card-pricing {
+    text-align: center;
+}
+
+.card-pricing .card-title {
+    margin-top: 30px;
+}
+
+.card-pricing .content {
+    padding: 15px !important;
+}
+
+.card-pricing ul {
+    list-style: none;
+    padding: 0;
+    max-width: 240px;
+    margin: 10px auto;
+}
+
+.card-pricing ul li {
+    color: #212121;
+    text-align: center;
+    padding: 12px 0;
+    border-bottom: 1px solid rgba(153, 153, 153, 0.3);
+}
+
+.card-pricing ul li:last-child {
+    border: 0;
+}
+
 ///////////////// Change button colors ///////////////////////////////////////
 .btn.btn-warning,.btn.btn-warning:hover,.btn.btn-warning:focus,.btn.btn-warning:active,.btn.btn-warning.active,.btn.btn-warning:active:focus,.btn.btn-warning:active:hover,.btn.btn-warning.active:focus,.btn.btn-warning.active:hover,.open>.btn.btn-warning.dropdown-toggle,.open>.btn.btn-warning.dropdown-toggle:focus,.open>.btn.btn-warning.dropdown-toggle:hover,.navbar .navbar-nav>li>a.btn.btn-warning,.navbar .navbar-nav>li>a.btn.btn-warning:hover,.navbar .navbar-nav>li>a.btn.btn-warning:focus,.navbar .navbar-nav>li>a.btn.btn-warning:active,.navbar .navbar-nav>li>a.btn.btn-warning.active,.navbar .navbar-nav>li>a.btn.btn-warning:active:focus,.navbar .navbar-nav>li>a.btn.btn-warning:active:hover,.navbar .navbar-nav>li>a.btn.btn-warning.active:focus,.navbar .navbar-nav>li>a.btn.btn-warning.active:hover,.open>.navbar .navbar-nav>li>a.btn.btn-warning.dropdown-toggle,.open>.navbar .navbar-nav>li>a.btn.btn-warning.dropdown-toggle:focus,.open>.navbar .navbar-nav>li>a.btn.btn-warning.dropdown-toggle:hover {
     background-color: #ff9800;
     color: #FFFFFF
+}
+/////////////// Add different toggle button variation ////////////////////////
+// Blue toggle button
+.togglebutton--blue label input[type=checkbox]:checked+.toggle {
+  background-color: $primary-blue;
+}
+.togglebutton--blue label .toggle, .togglebutton label input[type=checkbox][disabled]+.toggle {
+  background-color: rgba(3, 169, 244, 0.5);
+}
+
+.togglebutton--blue label .toggle:after {
+  border-color: $primary-blue;
+}
+
+.togglebutton--blue label input[type=checkbox]:checked+.toggle:after {
+  border-color: $primary-blue;
 }
