--- a/views/faq.pug
+++ b/views/faq.pug
@@ -93,7 +93,7 @@ block content
                     p If you decide to pay some money for the hosting (or you simply can't use any of the free solutions) both DigitalOcean and Linode offer equally great services and you can't go wrong choosing either of them.
           section.row.mt4.mb6
             .col-sm-12
-              h3#domain Domain
+              h3 Frequently Asked Questions
               .js-faq-accordion.panel-group(role="tablist" aria-multiselectable="true")
                 .panel.panel-default
                   +accordion-header('domain-why')
