--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -13,7 +13,7 @@ nav.navbar.navbar-transparent.navbar-fixed-top.navbar-color-on-scroll.navbar-inf
           a.dropdown-toggle(href='#' data-toggle="dropdown") Tools #[b.caret]
           ul.dropdown-menu
             li #[a(href="/hosting") Hosting]
-            li #[a(href="/domain") Domains]
+            li #[a(href="/domain") Domain]
             li #[a(href="/ssl") SSL]
             li #[a(href="/monitoring") Monitoring]
             li #[a(href="/web-analytics") Analytics]
