--- a/views/layout.pug
+++ b/views/layout.pug
@@ -18,7 +18,7 @@ html(lang="en")
     meta(name='twitter:title' content='deploystack.io')
     meta(name='twitter:description' content='Curated list of best tools for launching your website. Find how to get the best hosting, cheapest domain, free CDN, error tracking, emails and more.')
     meta(name='twitter:image' content=cdn + "/img/twitter_card_img.png")
-    title= title
+    title= title || 'Best tools for launching your website - Deploystack'
     //- Favicon
     link(rel="apple-touch-icon" href=cdn + "/apple-touch-icon.png")
     //- Fonts and icons
