--- a/views/includes/footer.pug
+++ b/views/includes/footer.pug
@@ -1,3 +1,16 @@
+//- Affiliation links modal
+#affiliations-disclaimer.modal.fade(tabindex="-1", role="dialog" aria-hidden="true")
+  .modal-dialog(role="document")
+    .modal-content.navy-blue
+      .modal-header
+        button.close(type="button", data-dismiss="modal", aria-hidden="true", aria-label="Close") &times;
+        h4.navy-blue#amazon-free-label.modal-title.text-center Affiliate links
+      .modal-body.text-center
+        p.navy-blue Affiliate links have a special code in the URL. If you register from this link, some companies will give free credits to either both of us or just to me (depending on how a company set up their affiliation program - I always ask if they have some coupon codes that will give credits to both sides). Those credits can be used on their website (for a few months of free hosting, a cheaper domain, etc.) or redeemed for money (only for domains providers).<br>
+          | Affiliation program doesn't affect whether a company is recommended or not. You can read more in the #[a(href="/faq#general") Do you get paid for including specific companies?] section of the FAQ.
+      .modal-footer
+        button.btn.btn-default.btn-simple(type="button", data-dismiss="modal") Close
+
 footer.footer.background-inverse
   .container
     .text-center
@@ -14,4 +27,3 @@ footer.footer.background-inverse
           i.fa.fa-facebook
         a.js-social-share.dib.pa2(href="https://plus.google.com/share?url=https://deploystack.io" target="_blank" title="Google Plus share")
           i.fa.fa-google-plus
-    include modals/affiliation-modal
